2004/02/04 01:21 (-0500) muppetman

	* GType.xs: call method _INSTALL_OVERRIDES on newly registered
	Glib::Object subclasses, to allow the new types an opportunity to
	install vfunc overrides.  This method will typically be provided
	by the class which introduces the vfuncs, and will install
	implementations which marshal to inheritable perl methods.
	Do nothing if no such method can be found; not all classes have
	pure vfuncs.

2004/02/03 00:57 (-0500) muppetman

	* GType.xs: remove debugging print

	* GenPod.pm: add 'unsigned' to list of built-in mappings

	* t/9.t, t/a.t: add mipsel, mips, and alpha to the list of 64-bit
	platforms on which to skip tests which exercise glib bugs.

2004/01/30 22:36 (-0500) muppetman

	* Subclass.pm: pass all unknown import parameters through to
	Glib::Type->register_object.  bump version.

2004/01/29 20:03 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.033

	* NEWS: updated

	1.032 isn't going public, was a test failure with no DISPLAY in Gtk2

2004/01/29 18:44 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.032

	* NEWS: updated

2004/01/27 11:44 (-0500) rwmcfa1

	* ParseXSDoc.pm, GenPod.pm: added a new =for type, see_also which
	allows for appending things to see onto the end of the apidoc 
	autogenerated SEE ALSO sections, much desired/asked for feature. code
	added to ParseXSDoc to find them and GenPod to use them.

2004/01/27 10:44 (-0500) rwmcfa1

	* MakeHelper.pm: provide a mechinism for over-ridding the global 
	variables in GenPod.

	* GenPod.pm: doc how to go about over-ridding the global vars.

2004/01/25 03:44 (-0500) muppetman

	* Glib.pm, README: unstable release 1.031

	* NEWS, MANIFEST.SKIP: updated

2004/01/25 01:00 (-0500) muppetman

	A NEWS
	M MANIFEST
	  add a file to summarize changes
	
	* GObject.xs: add freeze_notify and thaw_notify.

	* GenPod.pm: add gshort and gushort to %basic_types, and FIXME
	notice on %basic_types to remind me that it needs to be extensible.