@@ -143,7 +143,7 @@ gperl_register_object (GType gtype,
 	}
 	class_info = class_info_new (gtype, package);
 	g_hash_table_insert (types_by_type,
-	                     GUINT_TO_POINTER (class_info->gtype), class_info);
+	                     (gpointer) class_info->gtype, class_info);
 	g_hash_table_insert (types_by_package, class_info->package, class_info);
 	/* warn ("registered class %s to package %s\n", class_info->class, class_info->package); */
 
@@ -187,8 +187,8 @@ gperl_register_object (GType gtype,
 
 			parent_class_info = (ClassInfo *) 
 			         g_hash_table_lookup (types_by_type,
-			                    GUINT_TO_POINTER (g_type_parent
-			                               (class_info->gtype)));
+			                    (gpointer) g_type_parent
+			                               (class_info->gtype));
 
 			if (parent_class_info) {
 				gperl_set_isa (class_info->package,
@@ -328,7 +328,7 @@ gperl_object_set_no_warn_unreg_subclass (GType gtype,
 		                                   g_direct_equal);
 	}
 	g_hash_table_insert (nowarn_by_type,
-	                     GUINT_TO_POINTER (gtype),
+	                     (gpointer) gtype,
 	                     GINT_TO_POINTER (nowarn));
 
 	G_UNLOCK (nowarn_by_type);
@@ -346,7 +346,7 @@ gperl_object_get_no_warn_unreg_subclass (GType gtype)
 	else
 		result = GPOINTER_TO_INT
 		              (g_hash_table_lookup (nowarn_by_type,
-		                                    GUINT_TO_POINTER (gtype)));
+		                                    (gpointer) gtype));
 
 	G_UNLOCK (nowarn_by_type);
 
@@ -369,8 +369,7 @@ gperl_object_package_from_type (GType gtype)
 		G_LOCK (types_by_type);
 
 		class_info = (ClassInfo *) 
-			g_hash_table_lookup (types_by_type,
-			                     GUINT_TO_POINTER (gtype));
+			g_hash_table_lookup (types_by_type, (gpointer) gtype);
 
 		G_UNLOCK (types_by_type);
 
@@ -401,8 +400,7 @@ gperl_object_stash_from_type (GType gtype)
 		G_LOCK (types_by_type);
 
 		class_info = (ClassInfo *) 
-			g_hash_table_lookup (types_by_type,
-			                     GUINT_TO_POINTER (gtype));
+			g_hash_table_lookup (types_by_type, (gpointer) gtype);
 
 		G_UNLOCK (types_by_type);
 
