@@ -90,8 +90,8 @@ gperl_register_fundamental (GType gtype, const char * package)
 			                       (GDestroyNotify)g_free);
 	}
 	p = g_strdup (package);
-	g_hash_table_insert (packages_by_type, GUINT_TO_POINTER (gtype), p);
-	g_hash_table_insert (types_by_package, p, GUINT_TO_POINTER (gtype));
+	g_hash_table_insert (packages_by_type, (gpointer) gtype, p);
+	g_hash_table_insert (types_by_package, p, (gpointer) gtype);
 	G_UNLOCK (types_by_package);
 	G_UNLOCK (packages_by_type);
 
@@ -110,8 +110,7 @@ gperl_fundamental_type_from_package (const char * package)
 {
 	GType res;
 	G_LOCK (types_by_package);
-	res = (GType) GPOINTER_TO_UINT
-			(g_hash_table_lookup (types_by_package, package));
+	res = (GType) g_hash_table_lookup (types_by_package, package);
 	G_UNLOCK (types_by_package);
 	return res;
 }
@@ -128,8 +127,7 @@ gperl_fundamental_package_from_type (GType gtype)
 	const char * res;
 	G_LOCK (packages_by_type);
 	res = (const char *)
-		g_hash_table_lookup (packages_by_type,
-		                     GUINT_TO_POINTER (gtype));
+		g_hash_table_lookup (packages_by_type, (gpointer) gtype);
 	G_UNLOCK (packages_by_type);
 	return res;
 }
@@ -1294,8 +1292,7 @@ gperl_type_base_init (gpointer class)
 		/* haven't seen this class instance before */
 		t = G_TYPE_FROM_CLASS (class);
 		do {
-			types = g_slist_prepend (types,
-			                         GUINT_TO_POINTER (t));
+			types = g_slist_prepend (types, (gpointer) t);
 		} while (0 != (t = g_type_parent (t)));
 	}
 
